feat: complete login page with background, validation & user persistence

--- a/src/ColdCash/ColdCash.Data/ColdCash.Data.csproj
+++ b/src/ColdCash/ColdCash.Data/ColdCash.Data.csproj
@@ -7,8 +7,14 @@
     <UseWinUI>true</UseWinUI>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.7" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.7" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.4654" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250606001" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ColdCash.Core\ColdCash.Core.csproj" />
   </ItemGroup>
   
 </Project>
