--- a/src/ColdCash/ColdCash.UI/ColdCash.UI.csproj
+++ b/src/ColdCash/ColdCash.UI/ColdCash.UI.csproj
@@ -14,6 +14,8 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Assets\ColdCash_Frosty_Background2.png" />
+    <None Remove="Views\AccountsPage.xaml" />
+    <None Remove="Views\AddEditAccountPage.xaml" />
     <None Remove="Views\LoginPage.xaml" />
     <None Remove="Views\MainDashboardPage.xaml" />
   </ItemGroup>
@@ -56,6 +58,16 @@
     <Content Update="Assets\ColdCash_Frosty_Background2.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Views\AddEditAccountPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Views\AccountsPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="Views\MainDashboardPage.xaml">
